feat: enhance DJ page with new images, hero background, and responsive moodboard

--- a/src/components/layout/TemplateRenderer.astro
+++ b/src/components/layout/TemplateRenderer.astro
@@ -50,7 +50,19 @@ const resolveVariant = (bp: any) => {
 };
 
 const resolveProps = (bp: any) => {
-  const override = getSectionOverride(bp.component);
+  let override = getSectionOverride(bp.component);
+
+  if (bp.component === 'Custom' && bp.props?.component) {
+    const specificOverride = getSectionOverride(bp.props.component);
+    if (specificOverride) {
+      override = {
+        ...(override || {}),
+        ...specificOverride,
+        props: { ...(override?.props || {}), ...(specificOverride.props || {}) }
+      };
+    }
+  }
+
   return { ...(bp.props || {}), ...(override?.props || {}) };
 };
 
