--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ const industryList = allIndustries.map((id) => getIndustryConfig(id));
 
 // Pre-filter industries by category
 const professionalServices = industryList.filter((industry) => ['accounting', 'law', 'consulting', 'financial', 'insurance'].includes(industry.id));
-const healthWellness = industryList.filter((industry) => ['healthcare', 'fitnessstudio'].includes(industry.id));
+const healthWellness = industryList.filter((industry) => ['healthcare', 'fitnessstudio', 'dental', 'spa', 'therapist'].includes(industry.id));
 const hospitalityCulinary = industryList.filter((industry) => ['restaurant', 'boutiquehotel'].includes(industry.id));
 const tradesServices = industryList.filter((industry) => ['contractor'].includes(industry.id));
 const creativeEvents = industryList.filter((industry) => ['dj'].includes(industry.id));
