--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,7 +12,7 @@ const professionalServices = industryList.filter((industry) => ['accounting', 'l
 const healthWellness = industryList.filter((industry) => ['healthcare', 'fitnessstudio', 'dental', 'spa', 'therapist'].includes(industry.id));
 const hospitalityCulinary = industryList.filter((industry) => ['restaurant', 'boutiquehotel'].includes(industry.id));
 const tradesServices = industryList.filter((industry) => ['contractor', 'electrician', 'landscaper'].includes(industry.id));
-const creativeEvents = industryList.filter((industry) => ['dj'].includes(industry.id));
+const creativeEvents = industryList.filter((industry) => ['dj', 'weddingplanner', 'photographer', 'eventvenue'].includes(industry.id));
 const realtyArchitecture = industryList.filter((industry) => ['realestate', 'architecture'].includes(industry.id));
 const otherServices = industryList.filter((industry) => ['education', 'recruitment'].includes(industry.id));
 ---
